--- a/patioLightsHost/configuration.ini
+++ b/patioLightsHost/configuration.ini
@@ -1,8 +1,8 @@
 [Configuration]
 # Raspberry Pi
-#SerialPort: \dev\ttyACM0 
+SerialPort: \dev\ttyACM0 
 # Windows
-SerialPort: COM5
+#SerialPort: COM5
 BaudRate: 115200
 # the com port has to be specified in the makefile to upload the arduino sketch too
 
@@ -12,8 +12,8 @@ DataFile: web\color_data
 # the IP addresses of each of the lightbulbs
 # refer to https://github.com/Chris-Johnston/WifiLedClass
 # for additional information
-Lightbulb1IP: 192.168.2.50
-Lightbulb2IP: 192.168.2.51
+Lightbulb1IP: 192.168.2.51
+Lightbulb2IP: 192.168.2.50
 Lightbulb3IP: 192.168.2.52
 
 # this should match with patterns as defined in controller
