added changes to php submit form, css, tweaks to serial controller

--- a/patioLightsHost/configuration.ini
+++ b/patioLightsHost/configuration.ini
@@ -1,13 +1,13 @@
 [Configuration]
 # Raspberry Pi
-SerialPort: \dev\ttyACM0 
+SerialPort: /dev/ttyACM0 
 # Windows
 #SerialPort: COM5
 BaudRate: 115200
 # the com port has to be specified in the makefile to upload the arduino sketch too
 
 # The relative location of the data file.
-DataFile: web\color_data
+DataFile: www/colorData.json
 
 # the IP addresses of each of the lightbulbs
 # refer to https://github.com/Chris-Johnston/WifiLedClass
