--- a/patioLightsHost/configuration.ini
+++ b/patioLightsHost/configuration.ini
@@ -1,8 +1,8 @@
 [Configuration]
 # Raspberry Pi
-SerialPort: /dev/ttyACM0 
+#SerialPort: /dev/ttyACM0 
 # Windows
-#SerialPort: COM5
+SerialPort: COM12
 BaudRate: 115200
 # the com port has to be specified in the makefile to upload the arduino sketch too
 
