--- a/patioLightsHost/configuration.ini
+++ b/patioLightsHost/configuration.ini
@@ -19,8 +19,8 @@ Lightbulb3IP: 192.168.2.52
 # this should match with patterns as defined in controller
 # this file is for importing pattern definitions into python script
 [Patterns]
-START_OF_MESSAGE = start
-END_OF_MESSAGE = end
+START_OF_MESSAGE = s
+END_OF_MESSAGE = e
 PATTERN_SOLIDCOLOR = '0'
 PATTERN_BLINK = '1'
 PATTERN_PULSE = '2'
