Added lightbulb patterns and web page presets

--- a/patioLightsHost/configuration.ini
+++ b/patioLightsHost/configuration.ini
@@ -6,7 +6,7 @@ SerialPort: COM12
 BaudRate: 250000
 # the com port has to be specified in the makefile to upload the arduino sketch too
 
-# The relative location of the data file.
+# The relative location of the data file from patioLightsHost.py
 DataFile: www/colorData.json
 
 # the IP addresses of each of the lightbulbs
@@ -33,10 +33,7 @@ PATTERN_RANDBLINK = '8'
 PATTERN_DECAY = '9'
 PRESET_REDWHITEBLUE = 'a'
 
-[Actions]
-ACTION_SETCOLOR = 'A'
-ACTION_FADECOLOR = 'B'
-ACTION_FLASH = 'C'
-ACTION_WIPELEFT = 'D'
-ACTION_WIPERIGHT = 'E'
-ACTION_WIPECENTER = 'F'
+[BulbPatterns]
+PATTERN_BULB_COLOR1 = '0'
+PATTERN_BULB_EACHCOLOR = '1'
+PATTERN_BULB_WAVE = '2'
