Added logging using python logger instead of just printing to console
this way I can view the output in the console, instead of restarting the
program while it runs

tail -f | grep "WARNING\|ERROR" on logfile to show important messages

--- a/patioLightsHost/configuration.ini
+++ b/patioLightsHost/configuration.ini
@@ -7,6 +7,7 @@ BaudRate: 250000
 # the com port has to be specified in the makefile to upload the arduino sketch too
 
 # The relative location of the data file from patioLightsHost.py
+# make sure this is chmod 777 so that php can write to it!
 DataFile: www/colorData.json
 
 # the IP addresses of each of the lightbulbs
