Added off preset. Adjusted default configuration to match setup.

--- a/patioLightsHost/configuration.ini
+++ b/patioLightsHost/configuration.ini
@@ -1,8 +1,8 @@
 [Configuration]
 # Raspberry Pi
-#SerialPort: /dev/ttyACM0 
+SerialPort: /dev/ttyACM0 
 # Windows
-SerialPort: COM12
+#SerialPort: COM12
 BaudRate: 250000
 # the com port has to be specified in the makefile to upload the arduino sketch too
 
@@ -13,9 +13,9 @@ DataFile: www/colorData.json
 # the IP addresses of each of the lightbulbs
 # refer to https://github.com/Chris-Johnston/WifiLedClass
 # for additional information
-Lightbulb1IP: 192.168.2.51
-Lightbulb2IP: 192.168.2.50
-Lightbulb3IP: 192.168.2.52
+Lightbulb1IP: 192.168.88.51
+Lightbulb2IP: 192.168.88.50
+Lightbulb3IP: 192.168.88.49
 
 # this should match with patterns as defined in controller
 # this file is for importing pattern definitions into python script
