Fixed configuration file format. Constants don't need to be surrounded with single quotation marks

--- a/patioLightsHost/configuration.ini
+++ b/patioLightsHost/configuration.ini
@@ -22,19 +22,19 @@ Lightbulb3IP: 192.168.88.49
 [Patterns]
 START_OF_MESSAGE = s
 END_OF_MESSAGE = e
-PATTERN_SOLIDCOLOR = '0'
-PATTERN_BLINK = '1'
-PATTERN_PULSE = '2'
-PATTERN_SCROLL = '3'
-PATTERN_SCROLLSMOOTH = '4'
-PATTERN_WIPELEFT = '5'
-PATTERN_WIPERIGHT = '6'
-PATTERN_LARSON = '7'
-PATTERN_RANDBLINK = '8'
-PATTERN_DECAY = '9'
-PRESET_REDWHITEBLUE = 'a'
+PATTERN_SOLIDCOLOR = 0
+PATTERN_BLINK = 1
+PATTERN_PULSE = 2
+PATTERN_SCROLL = 3
+PATTERN_SCROLLSMOOTH = 4
+PATTERN_WIPELEFT = 5
+PATTERN_WIPERIGHT = 6
+PATTERN_LARSON = 7
+PATTERN_RANDBLINK = 8
+PATTERN_DECAY = 9
+PRESET_REDWHITEBLUE = a
 
 [BulbPatterns]
-PATTERN_BULB_COLOR1 = '0'
-PATTERN_BULB_EACHCOLOR = '1'
-PATTERN_BULB_WAVE = '2'
+PATTERN_BULB_COLOR1 = 0
+PATTERN_BULB_COLOREACH = 1
+PATTERN_BULB_WAVE = 2
